--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,6 @@ nav {
     height: 100vh;
     width: 100vw;
     
-    position: relative;
-    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,4 +57,6 @@ nav {
     opacity: .2;
 
     border-radius: 10px;
+
+    pointer-events: none;
 }
